Can't snap between objects with Rigid Body #70126

Closed
opened 2019-09-20 22:20:47 +02:00 by Jon Silkjær Krohn · 30 comments

Blender Version
Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: f6cb5f5449
Worked: (optional)

Short description of error
Cant snap to vertex with rigidbody

Exact steps for others to reproduce the error

  • Duplicate default cube
  • add rigidbodys to both cubes
  • enable snap to vertex
  • try snap to a vertex on 1 of the cubes.

or

  • Open attached file
  • try snap to a vertex on 1 of the cubes.

snap_rigid_body.blend

**Blender Version** Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: `f6cb5f5449` Worked: (optional) **Short description of error** Cant snap to vertex with rigidbody **Exact steps for others to reproduce the error** - Duplicate default cube - add rigidbodys to both cubes - enable snap to vertex - try snap to a vertex on 1 of the cubes. or - Open attached file - try snap to a vertex on 1 of the cubes. [snap_rigid_body.blend](https://archive.blender.org/developer/F8416009/snap_rigid_body.blend)

Added subscriber: @Robo7Gamer

Added subscriber: @Robo7Gamer

#74882 was marked as duplicate of this issue

#74882 was marked as duplicate of this issue

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Please provide a simple file demonstrating the problem.

Please provide a simple file demonstrating the problem.
[BugReport.blend](https://archive.blender.org/developer/F7773659/BugReport.blend)

There you go

There you go

I can't reproduce the problem with the attached file, it snaps to vertices of rigid body cubes normally (pressing ctrl or enabling snap).

I can't reproduce the problem with the attached file, it snaps to vertices of rigid body cubes normally (pressing ctrl or enabling snap).

Can you snap the rigidbody to the other rigidbody?

Can you snap the rigidbody to the other rigidbody?

Added subscriber: @Sergey

Added subscriber: @Sergey

@Sergey, see that file attached in the comment...
The set_trans_object_base_deps_flag_cb indicates that there is a DEG_OB_COMP_TRANSFORM dependence between the two Rigid Body objects.
This causes the object to be snapped to have a BA_SNAP_FIX_DEPS_FIASCO flag.

Why is there this dependence between these Rigid Body objects?

@Sergey, see that file attached in the comment... The `set_trans_object_base_deps_flag_cb` indicates that there is a `DEG_OB_COMP_TRANSFORM` dependence between the two `Rigid Body` objects. This causes the object to be snapped to have a `BA_SNAP_FIX_DEPS_FIASCO` flag. Why is there this dependence between these `Rigid Body` objects?

@mano-wii:

object 1 transform before solver ---> solver ------> object 1 final transform
object 2 transform before solver -----^     \------> object 2 final transform
@mano-wii: ``` object 1 transform before solver ---> solver ------> object 1 final transform object 2 transform before solver -----^ \------> object 2 final transform

This issue was referenced by 5603725389

This issue was referenced by 5603725389f7315fe158d93cff650ccaee57c0f9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sergey Sharybin self-assigned this 2019-09-26 15:25:33 +02:00

Added subscriber: @ChristophWerner

Added subscriber: @ChristophWerner

Version: 2.82 (sub 7), branch: master, commit date: 2020-02-12 16:20, hash: 77d23b0bd7, type: Release
build date: 2020-02-13, 01:56:46
platform: Windows


Problem still exists in Blender v2.8.2. -> Can't snap between rigid body objects.
Is this willed? See attached example scene.

How to reproduce

  1. Select one of the house parts (Inside "House" Collection)
  2. Try to snap the selected part to the ground
  • Not possible

Works when you remove the rigid body physics from the selected objects or ground.

rigid_body_snap_bug02.blend
rigid_body_bug01.gif

Version: 2.82 (sub 7), branch: master, commit date: 2020-02-12 16:20, hash: 77d23b0bd76f, type: Release build date: 2020-02-13, 01:56:46 platform: Windows --- Problem still exists in Blender v2.8.2. -> Can't snap between rigid body objects. Is this willed? See attached example scene. How to reproduce 1. Select one of the house parts (Inside "House" Collection) 2. Try to snap the selected part to the ground - > Not possible Works when you remove the rigid body physics from the selected objects or ground. [rigid_body_snap_bug02.blend](https://archive.blender.org/developer/F8348250/rigid_body_snap_bug02.blend) ![rigid_body_bug01.gif](https://archive.blender.org/developer/F8344506/rigid_body_bug01.gif)

Changed status from 'Resolved' to: 'Needs Triage'

Changed status from 'Resolved' to: 'Needs Triage'

@ChristophWerner, must be related to D6834, then it will be fixed when the patch is landed.

@ChristophWerner, must be related to [D6834](https://archive.blender.org/developer/D6834), then it will be fixed when the patch is landed.

Thank you.

Thank you.

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'

@ChristophWerner, I cannot reproduce your problem.
If you are sure this is a bug, please submit a new report and carefully follow the instructions. Be sure to provide system information, Blender version, and a .blend file with exact steps to reproduce the problem.

@ChristophWerner, I cannot reproduce your problem. If you are sure this is a bug, please submit a new report and carefully follow the instructions. Be sure to provide system information, Blender version, and a .blend file with exact steps to reproduce the problem.

In #70126#875399, @mano-wii wrote:
@ChristophWerner, I cannot reproduce your problem.
If you are sure this is a bug, please submit a new report and carefully follow the instructions. Be sure to provide system information, Blender version, and a .blend file with exact steps to reproduce the problem.

Excuse me, please. I forgot to upload the right example file. Now the bug should be reproduced.

Please follow the steps in my 1st post.

The system info is there, too.

> In #70126#875399, @mano-wii wrote: > @ChristophWerner, I cannot reproduce your problem. > If you are sure this is a bug, please submit a new report and carefully follow the instructions. Be sure to provide system information, Blender version, and a .blend file with exact steps to reproduce the problem. Excuse me, please. I forgot to upload the right example file. Now the bug should be reproduced. Please follow the steps in my 1st post. The system info is there, too.

Bug is still existing in:

version: 2.82 (sub 7), branch: master, commit date: 2020-03-12 05:06, hash: 375c7dc4ca, type: Release
build date: 2020-03-12, 15:41:08
platform: Windows

Bug is still existing in: version: 2.82 (sub 7), branch: master, commit date: 2020-03-12 05:06, hash: 375c7dc4caf4, type: Release build date: 2020-03-12, 15:41:08 platform: Windows
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

The original issue seems to be resolved:

  • you can now snap an object [without rigidbody] to a vertex [with rigid body]

What I can reproduce:

  • you cannot snap between objects [both having a rigid body]

@ChristophWerner: please open a new report "Can't snap between rigid body objects" [this is not exactly the same issue as the original report], and refer to this report as a followup, thx.

The original issue seems to be resolved: - you can now snap an object [without rigidbody] to a vertex [with rigid body] What I **can** reproduce: - you cannot snap between objects [both having a rigid body] @ChristophWerner: please open a new report "Can't snap between rigid body objects" [this is not exactly the same issue as the original report], and refer to this report as a followup, thx.

In #70126#893280, @lichtwerk wrote:

...

@ChristophWerner: please open a new report "Can't snap between rigid body objects" [this is not exactly the same issue as the original report], and refer to this report as a followup, thx.

Done -> #74882

> In #70126#893280, @lichtwerk wrote: ... > @ChristophWerner: please open a new report "Can't snap between rigid body objects" [this is not exactly the same issue as the original report], and refer to this report as a followup, thx. Done -> #74882

Changed status from 'Resolved' to: 'Confirmed'

Changed status from 'Resolved' to: 'Confirmed'

The problem is back.

The problem is back.

Added subscriber: @ankitm

Added subscriber: @ankitm
Germano Cavalcante changed title from Cant Snap To Vertex With Rigidbody to Can't snap between objects with Rigid Body 2020-03-19 17:10:15 +01:00

This issue was referenced by 3be7d74cba

This issue was referenced by 3be7d74cba7feee09a0684bdeac7c6336e72814a

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70126
No description provided.